--- a/IDE/static/IDE/css/basic-webide.css
+++ b/IDE/static/IDE/css/basic-webide.css
@@ -1,3 +1,39 @@
 body {
-    font-family: sans-serif
+    font-family: sans-serif;
+    overflow: hidden;
+}
+
+html, body { height: 100%; padding: 0; margin: 0; }
+.div-container-tree { width: 20%; height: 100%; float: left;  background: #444;}
+.div-container-right { width: 80%; height: 100%; float: left;  background: #E9E9E9;}
+.div-container-editors { 
+    width: 100%; 
+    height: 70%; 
+    float: left;  
+}
+.div-container-outputs { width: 100%; height: 30%; float: left;  background: #4DAF3C;}
+
+.navbar-separator {
+    height: 60px;
+}
+
+.tab-content-full {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    padding-bottom: 105px;
+}
+
+.tab-pane-content-full {
+    width: 100%;
+    height: 100%;
+    background: #03034A;
+}
+
+
+.sql-editor {
+    width: 100%;
+    height: 100%;
+    float: left;
+    border: none;
 }
