--- a/IDE/templates/IDE/home.html
+++ b/IDE/templates/IDE/home.html
@@ -1,12 +1,29 @@
 {% extends "IDE/base-layout.html" %} {% block content %}
 
-<div class="div-container-tree">
-    <br><br><br>
-    <button class="btn">+ Bases de datos</button>
+<div class="div-container-left">
+    <div class="navbar-separator"></div>
+    
+    <!-- Tree container -->
+    <div class="div-container-tree">
+        <ul class="nav nav-tabs" id="myTabTree" role="tablist">
+            <li class="nav-item">
+                <a class="nav-link active" id="tree-tab-panel" data-toggle="tab" href="#tree-tab" role="tab" aria-controls="tree-tab"
+                    aria-expanded="true">Bases de datos</a>
+            </li>
+        </ul>
+        <div class="tab-content tab-content-full-output" id="myTabContent">
+            <div class="tab-pane fade show active tab-pane-item-output" id="tree-tab" role="tabpanel" aria-labelledby="tree-tab">
+                <div id="treeview12" class=""></div>
+            </div>
+        </div>
+    </div>
 </div>
+
 <div class="div-container-right">
+    <div class="navbar-separator"></div>
+
+    <!-- Editors container -->
     <div class="div-container-editors">
-        <div class="navbar-separator"></div>
         <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item">
                 <a class="nav-link active" id="sql-tab" data-toggle="tab" href="#sql" role="tab" aria-controls="sql" aria-expanded="true">SQL</a>
@@ -16,24 +33,27 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                        <span class="oi oi-plus"></span>
+                        <span class="fa fa-plus"></span>
                     </a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" id="dropdown1-tab" href="#dropdown1" role="tab" data-toggle="tab" aria-controls="dropdown1"><span class="oi oi-code"></span> New USQL editor</a>
-                    <a class="dropdown-item" id="dropdown2-tab" href="#dropdown2" role="tab" data-toggle="tab" aria-controls="dropdown2"><span class="oi oi-file"></span> Open USQL from database</a>
-                    <a class="dropdown-item" id="dropdown2-tab" href="#dropdown2" role="tab" data-toggle="tab" aria-controls="dropdown2"><span class="oi oi-cloud-upload"></span> Upload USQL</a>
+                    <a class="dropdown-item" id="dropdown1-tab" href="#dropdown1" role="tab" data-toggle="tab" aria-controls="dropdown1"><span class="fa fa-code"></span> New USQL editor</a>
+                    <a class="dropdown-item" id="dropdown2-tab" href="#dropdown2" role="tab" data-toggle="tab" aria-controls="dropdown2"><span class="fa fa-file"></span> Open USQL from database</a>
+                    <a class="dropdown-item" id="dropdown2-tab" href="#dropdown2" role="tab" data-toggle="tab" aria-controls="dropdown2"><span class="fa fa-cloud-upload"></span> Upload USQL</a>
                 </div>
             </li>
         </ul>
-        <div class="tab-content tab-content-full" id="myTabContent">
-            <div class="tab-pane fade show tab-pane-content-full active" id="sql" role="tabpanel" aria-labelledby="sql-tab">
+        <div class="tab-content tab-content-full-editor" id="myTabContent">
+            <div class="tab-pane fade show tab-pane-item-editor active" id="sql" role="tabpanel" aria-labelledby="sql-tab">
                 <textarea class="sql-editor">Aqui el editor de SQL</textarea>
             </div>
-            <div class="tab-pane fade tab-pane-content-full" id="profile" role="tabpanel" aria-labelledby="profile-tab">...</div>
-            <div class="tab-pane fade tab-pane-content-full" id="dropdown1" role="tabpanel" aria-labelledby="dropdown1-tab">...</div>
-            <div class="tab-pane fade tab-pane-content-full" id="dropdown2" role="tabpanel" aria-labelledby="dropdown2-tab">...</div>
+            <div class="tab-pane fade tab-pane-item-editor" id="profile" role="tabpanel" aria-labelledby="profile-tab">...</div>
+            <div class="tab-pane fade tab-pane-item-editor" id="dropdown1" role="tabpanel" aria-labelledby="dropdown1-tab">...</div>
+            <div class="tab-pane fade tab-pane-item-editor" id="dropdown2" role="tabpanel" aria-labelledby="dropdown2-tab">...</div>
         </div>
     </div>
+
+
+    <!-- Outputs container -->
     <div class="div-container-outputs">
         <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item">
@@ -50,17 +70,17 @@
                 <a class="nav-link" id="historial-tab" data-toggle="tab" href="#historial" role="tab" aria-controls="historial">Historial</a>
             </li>
         </ul>
-        <div class="tab-content tab-content-full" id="myTabContent">
-            <div class="tab-pane fade show active tab-pane-content-full" id="salida-datos" role="tabpanel" aria-labelledby="salida-datos">
-                <textarea class="sql-editorr">Aqui el editor de SQL</textarea>
+        <div class="tab-content tab-content-full-output" id="myTabContent">
+            <div class="tab-pane fade show active tab-pane-item-output" id="salida-datos" role="tabpanel" aria-labelledby="salida-datos">
+                <textarea class="console"> FISQL $ </textarea>
             </div>
-            <div class="tab-pane fade tab-pane-content-full" id="plan" role="tabpanel" aria-labelledby="plan-tab">
+            <div class="tab-pane fade tab-pane-item-output" id="plan" role="tabpanel" aria-labelledby="plan-tab">
                 <h3>Plan de ejecución</h3>
             </div>
-            <div class="tab-pane fade tab-pane-content-full" id="mensajes" role="tabpanel" aria-labelledby="mensajes-tab">
+            <div class="tab-pane fade tab-pane-item-output" id="mensajes" role="tabpanel" aria-labelledby="mensajes-tab">
                 <h3>Mensajes</h3>
             </div>
-            <div class="tab-pane fade tab-pane-content-full" id="historial" role="tabpanel" aria-labelledby="historial-tab">
+            <div class="tab-pane fade tab-pane-item-output" id="historial" role="tabpanel" aria-labelledby="historial-tab">
                 <h3>Historial</h3>
             </div>
         </div>
@@ -68,3 +88,15 @@
 </div>
 
 {% endblock content %}
+
+
+{% block javascript %}
+
+
+
+<script type="text/javascript">
+    
+    
+</script>
+
+{% endblock javascript %}
