--- a/IDE/static/IDE/css/basic-webide.css
+++ b/IDE/static/IDE/css/basic-webide.css
@@ -92,13 +92,13 @@ html, body { height: 100%; padding: 0; margin: 0; }
     width: 100%;
     height: 100%;
     float: left;
-    
-    /*font-family: Consolas, monaco, monospace;
-	font-size: 17px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 400;
-	line-height: 25px;*/
+}
+
+.report-editor {
+    width: 50%;
+    height: 100%;
+    float: left;
+    border: 3px solid #eee;
 }
 
 .console {
