--- a/IDE/static/IDE/css/basic-webide.css
+++ b/IDE/static/IDE/css/basic-webide.css
@@ -41,18 +41,15 @@ html, body { height: 100%; padding: 0; margin: 0; }
 }
 
 .navbar-separator {
-    height: 56px;
+    height: 33px;
 }
 
-.nav-tabs {
-    padding-left: 5px;
-}
 
 .tab-content-full-editor {
     width: 100%;
     height: 100%;
     overflow: hidden;
-    padding-bottom: 42px;
+    padding-bottom: 25px;
 }
 
 
@@ -60,7 +57,7 @@ html, body { height: 100%; padding: 0; margin: 0; }
     width: 100%;
     height: 100%;
     overflow: hidden;
-    padding-bottom: 98px;
+    padding-bottom: 60px;
 }
 
 .tab-pane-item-editor {
@@ -128,3 +125,26 @@ html, body { height: 100%; padding: 0; margin: 0; }
 
 .CodeMirror {border: 0px solid #eee; height: 100% !important;}
 .CodeMirror-linenumbers { padding: 0 8px; }
+
+.treeview .list-group-item {
+    position: relative;
+    display: block;
+    padding: 5px 15px;
+    margin-bottom: -1px;
+    line-height: 1em
+}
+
+.nav-item a{
+    padding: 0px 15px;
+}
+
+.navbar-nav > li > a, .navbar-brand {
+    padding-top:0px !important; 
+    padding-bottom: 0px !important;
+    height: 20px;
+}
+.navbar {min-height:0px !important;}
+
+.nav-tabs {
+    padding-left: 5px;
+}
