--- a/IDE/templates/IDE/home.html
+++ b/IDE/templates/IDE/home.html
@@ -15,24 +15,43 @@
             <div class="tab-pane fade show active tab-pane-item-output" id="tree-tab" role="tabpanel" aria-labelledby="tree-tab">
                 <div id="treeview12" class=""></div>
                 
-                <div id="contextMenu_databases" class="dropdown-menu" role="menu" style="display:none" >
+                <div id="cm_databases" class="dropdown-menu" role="menu" style="display:none" >
                     <a class="dropdown-item" tabindex="-1" href="#">Crear Base de datos</a>
+                    <a class="dropdown-item" tabindex="-1" href="#">Ver código</a>
                 </div>                
-                <div id="contextMenu_database" class="dropdown-menu" role="menu" style="display:none" >
+                <div id="cm_database" class="dropdown-menu" role="menu" style="display:none" >
                     <a class="dropdown-item" tabindex="-1" href="#">Eliminar</a>
                     <a class="dropdown-item" tabindex="-1" href="#">Crear script</a>
                     <a class="dropdown-item" tabindex="-1" href="#">Backup</a>
-                    <a class="dropdown-item" tabindex="-1" href="#">Restore</a>
+                    <a class="dropdown-item" tabindex="-1" href="#">Restaurar</a>
                     <a class="dropdown-item" tabindex="-1" href="#">Asignar permisos</a>
                 </div>                
-                <div id="contextMenu_tables" class="dropdown-menu" role="menu" style="display:none" >
+                <div id="cm_tables" class="dropdown-menu" role="menu" style="display:none" >
                     <a class="dropdown-item" tabindex="-1" href="#">Crear tabla</a>
                 </div>               
-                <div id="contextMenu_table" class="dropdown-menu" role="menu" style="display:none" >
-                    <a class="dropdown-item" tabindex="-1" href="#">Asiganr permisos</a>
+                <div id="cm_table" class="dropdown-menu" role="menu" style="display:none" >
+                    <a class="dropdown-item" tabindex="-1" href="#">Asignar permisos</a>
                     <a class="dropdown-item" tabindex="-1" href="#">Ver data</a>
-                    <span class="divider">
-                    <a class="dropdown-item" tabindex="-1" href="#">Otra opción</a>
+                </div>
+                <div id="cm_functions" class="dropdown-menu" role="menu" style="display:none" >
+                    <a class="dropdown-item" tabindex="-1" href="#">Crear función</a>
+                </div>               
+                <div id="cm_function" class="dropdown-menu" role="menu" style="display:none" >
+                    <a class="dropdown-item" tabindex="-1" href="#">Asignar permisos</a>
+                    <a class="dropdown-item" tabindex="-1" href="#">Ver codigo</a>
+                </div>
+                <div id="cm_objects" class="dropdown-menu" role="menu" style="display:none" >
+                    <a class="dropdown-item" tabindex="-1" href="#">Crear objeto</a>
+                </div>               
+                <div id="cm_object" class="dropdown-menu" role="menu" style="display:none" >
+                    <a class="dropdown-item" tabindex="-1" href="#">Asignar permisos</a>
+                    <a class="dropdown-item" tabindex="-1" href="#">Ver codigo</a>
+                </div>
+                <div id="cm_users" class="dropdown-menu" role="menu" style="display:none" >
+                    <a class="dropdown-item" tabindex="-1" href="#">Crear Usuario</a>
+                </div>               
+                <div id="cm_user" class="dropdown-menu" role="menu" style="display:none" >
+                    <a class="dropdown-item" tabindex="-1" href="#">Eliminar Usuario</a>
                 </div>
 
 
