--- a/IDE/templates/IDE/components/scriptPanel.html
+++ b/IDE/templates/IDE/components/scriptPanel.html
@@ -1,10 +1,10 @@
-<div class="tab-pane fade tab-pane-script-editor show active" id="script-editor-{{ numPanel }}" role="tabpanel" aria-labelledby="script-editor-{{ numPanel }}-tab">
+<div class="tab-pane fade tab-pane-script-editor show active" id="script-editor-txtScript{{ numPanel }}" role="tabpanel" aria-labelledby="script-editor-txtScript{{ numPanel }}-tab">
         
     <div class="menu-script">
             &nbsp;&nbsp;
             <a href="" class="fa fa-2x fa-save"></a>&nbsp;&nbsp;
             <a href="" class="fa fa-2x fa-folder"></a>&nbsp;&nbsp;
-            <a href="" class="fa fa-2x fa-window-close"></a>
+            <a href="javascript:eliminarEditor('txtScript{{ numPanel }}')" class="fa fa-2x fa-window-close"></a>
             &nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="javascript:executeScript({{ numPanel }})" class="fa fa-2x fa-play"></a>&nbsp;&nbsp;
             <a href="" class="fa fa-2x fa-indent"></a>&nbsp;&nbsp;
