--- a/IDE/templates/IDE/components/scriptPanelTab.html
+++ b/IDE/templates/IDE/components/scriptPanelTab.html
@@ -1,3 +1,3 @@
-<li class="nav-item" id="script-editor-{{ numPanel }}-li-tab">
-    <a class="nav-link" id="script-editor-{{ numPanel }}-tab" data-toggle="tab" href="#script-editor-{{ numPanel }}" role="tab" aria-controls="script-editor-{{ numPanel }}" aria-expanded="true">Script {{ numPanel }}</a>
+<li class="nav-item" id="script-editor-txtScript{{ numPanel }}-li-tab">
+    <a class="nav-link" id="script-editor-txtScript{{ numPanel }}-tab" data-toggle="tab" href="#script-editor-txtScript{{ numPanel }}" role="tab" aria-controls="script-editor-txtScript{{ numPanel }}" aria-expanded="true">Script {{ numPanel }}</a>
 </li>
