--- a/IDE/templates/IDE/home.html
+++ b/IDE/templates/IDE/home.html
@@ -102,7 +102,7 @@
         </ul>
         <div class="tab-content tab-content-full-output" id="myOutputsTabContent">
             <div class="tab-pane fade show active tab-pane-item-output" id="salida-datos" role="tabpanel" aria-labelledby="salida-datos">
-                <textarea id="output-datos" class="console"></textarea>
+                <div id="output-datos" class="tabla_resultado"></div>
             </div>
             <div class="tab-pane fade tab-pane-item-output" id="plan" role="tabpanel" aria-labelledby="plan-tab">
                 <textarea id="output-plan" class="console"></textarea>
