--- a/IDE/static/IDE/css/basic-webide.css
+++ b/IDE/static/IDE/css/basic-webide.css
@@ -148,3 +148,11 @@ html, body { height: 100%; padding: 0; margin: 0; }
 .nav-tabs {
     padding-left: 5px;
 }
+
+.tabla_resultado {
+    overflow: scroll;
+}
+
+.tabla_resultado table {
+    border: 1px solid black;
+}
