soporte para scroll en tablas

--- a/IDE/templates/IDE/home.html
+++ b/IDE/templates/IDE/home.html
@@ -101,7 +101,7 @@
             </li>
         </ul>
         <div class="tab-content tab-content-full-output" id="myOutputsTabContent">
-            <div class="tab-pane fade show active tab-pane-item-output" id="salida-datos" role="tabpanel" aria-labelledby="salida-datos">
+            <div class="tab-pane fade show active tab-pane-item-output-table" id="salida-datos" role="tabpanel" aria-labelledby="salida-datos">
                 <div id="output-datos" class="tabla_resultado"></div>
             </div>
             <div class="tab-pane fade tab-pane-item-output" id="plan" role="tabpanel" aria-labelledby="plan-tab">
