--- a/IDE/static/IDE/css/basic-webide.css
+++ b/IDE/static/IDE/css/basic-webide.css
@@ -57,7 +57,7 @@ html, body { height: 100%; padding: 0; margin: 0; }
     width: 100%;
     height: 100%;
     overflow: hidden;
-    padding-bottom: 60px;
+    padding-bottom: 44px;
 }
 
 .tab-pane-item-editor {
@@ -149,10 +149,24 @@ html, body { height: 100%; padding: 0; margin: 0; }
     padding-left: 5px;
 }
 
-.tabla_resultado {
+.tab-pane-item-output-table {
+    width: 100%;
+    height: 100%;
+    background: #FFFFFF;
     overflow: scroll;
+
+    border-style: solid;
+    border-width: 2px 0px 0px 0px;
+    border-color: #FFFFFF;
 }
 
 .tabla_resultado table {
-    border: 1px solid black;
+    overflow-x:scroll;
+    overflow-y:scroll;
 }
+
+.tabla_resultado table, th, td {
+    border: 1px solid #ddd;
+ }
+
+ .tabla_resultado tr:hover {background-color: #f5f5f5}
