Se terminaron los metodos graficos

--- a/IDE/templates/IDE/components/reportPanel.html
+++ b/IDE/templates/IDE/components/reportPanel.html
@@ -2,7 +2,7 @@
         
     <div class="menu-script">
             &nbsp;&nbsp;
-            <a href="" class="fa fa-2x fa-window-close"></a>
+            <a href="javascript:eliminarEditor('report-editor-{{ numPanel }}')" class="fa fa-2x fa-window-close"></a>
             &nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="javascript:executeReport({{ numPanel }})" class="fa fa-2x fa-play"></a>&nbsp;&nbsp;
             <a href="javascript:showReport({{ numPanel }})" class="fa fa-2x fa-eye"></a>&nbsp;&nbsp;
