--- a/IDE/templates/IDE/components/scriptPanel.html
+++ b/IDE/templates/IDE/components/scriptPanel.html
@@ -4,7 +4,7 @@
             &nbsp;&nbsp;
             <a href="" class="fa fa-2x fa-save"></a>&nbsp;&nbsp;
             <a href="" class="fa fa-2x fa-folder"></a>&nbsp;&nbsp;
-            <a href="javascript:eliminarEditor('txtScript{{ numPanel }}')" class="fa fa-2x fa-window-close"></a>
+            <a href="javascript:eliminarEditor('script-editor-txtScript{{ numPanel }}')" class="fa fa-2x fa-window-close"></a>
             &nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="javascript:executeScript({{ numPanel }})" class="fa fa-2x fa-play"></a>&nbsp;&nbsp;
             <a href="" class="fa fa-2x fa-indent"></a>&nbsp;&nbsp;
