--- a/IDE/templates/IDE/home.html
+++ b/IDE/templates/IDE/home.html
@@ -23,18 +23,21 @@
                     <a class="dropdown-item" tabindex="-1" href="#">Crear script</a>
                     <a class="dropdown-item" tabindex="-1" href="#">Backup</a>
                     <a class="dropdown-item" tabindex="-1" href="#">Restaurar</a>
-                    <a class="dropdown-item" tabindex="-1" href="#">Asignar permisos</a>
+                    <!--a class="dropdown-item" tabindex="-1" href="#">Asignar permisos</a-->
                     <a class="dropdown-item" tabindex="-1" href="#">Ver código</a>
                 </div>                
                 <div id="cm_tables" class="dropdown-menu" role="menu" style="display:none" >
                     <a class="dropdown-item" tabindex="-1" href="#">Crear tabla</a>
                 </div>               
                 <div id="cm_table" class="dropdown-menu" role="menu" style="display:none" >
-                    <a class="dropdown-item" tabindex="-1" href="#">Asignar permisos</a>
+                    <!--a class="dropdown-item" tabindex="-1" href="#">Asignar permisos</a-->
                     <a class="dropdown-item" tabindex="-1" href="#">Ver data</a>
                 </div>
                 <div id="cm_functions" class="dropdown-menu" role="menu" style="display:none" >
                     <a class="dropdown-item" tabindex="-1" href="#">Crear función</a>
+                </div>  
+                <div id="cm_procedures" class="dropdown-menu" role="menu" style="display:none" >
+                    <a class="dropdown-item" tabindex="-1" href="#">Crear procedimiento</a>
                 </div>  
                 <div id="cm_objects" class="dropdown-menu" role="menu" style="display:none" >
                     <a class="dropdown-item" tabindex="-1" href="#">Crear objeto</a>
@@ -147,21 +150,208 @@
     </div>
 </div>
 
-  <!-- Modal Eliminar bd -->
-  <!-- Modal  crear script bd-->
-  <!-- Modal  backup bd -->
-  <!-- Modal  restore bd-->
-  <!-- Modal  asignar permisos bd-->
-  <!-- Modal  crear tabla-->
-  <!-- Modal  asignar permisos tabla-->
-  <!-- Modal  ver data tabla-->
+  <!--x Modal Eliminar bd -->
+  <!--x Modal  crear script bd-->
+  <!--x Modal  backup bd -->
+  <!--x Modal  restore bd-->
+  <!--xxx Modal  asignar permisos bd-->
+  <!--x Modal  crear tabla-->
+  
+  <div class="modal fade" id="modal_cm_crear_tabla" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="ModalLabel">Crear tabla</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <!-- inicia contenido-->
+                <form>
+                    <div class="form-group">
+                        Nombre de la tabla:
+                        <input type="text" class="form-control" id="cm_crear_tabla_nombre">
+                    </div>
+                    <div class="form-group">
+                        Campos:
+                        <select class="form-control" multiple id="cm_crear_tabla_campos">
+                        </select>
+                    </div>
+                    <div class="form-group">
+                            Agregar campo:
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <input type="text" class="form-control" id="cm_crear_tabla_nombre_campo" placeholder="nombre del campo">
+                            </div>
+                            <div class="col-sm-6">
+                                <select class="form-control" id="cm_crear_tabla_tipo_dato">
+                                    <option value="TEXT">Text</option>
+                                    <option value="INTEGER">Integer</option>
+                                    <option value="DOUBLE">Double</option>
+                                    <option value="BOOL">Bool</option>
+                                    <option value="DATE">Date</option>
+                                    <option value="DATETIME">DateTime</option>
+                                    <option value="<<Objeto>>">Objeto</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        
+                    </div>
+                    <div class="form-group">
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <div class="checkbox">
+                                    <label><input type="checkbox" value="" id="cm_crear_tabla_comp_nulo">Nulo</label>
+                                </div>
+                                <div class="checkbox">
+                                    <label><input type="checkbox" value="" id="cm_crear_tabla_comp_autoincrementable">Autoincrementable</label>
+                                </div>
+                                <div class="checkbox">
+                                    <label><input type="checkbox" value="" id="cm_crear_tabla_comp_primaria">Llave primaria</label>
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="checkbox">
+                                    <label><input type="checkbox" value="" id="cm_crear_tabla_comp_foranea">Llave foranea</label>
+                                </div>
+                                <div class="checkbox">
+                                    <label><input type="checkbox" value="" id="cm_crear_tabla_comp_unico">unico</label>
+                                </div>
+                            </div>
+                        </div>
+                        <button onclick="cm_crear_tabla_agregar_campo()" type="button" class="btn btn-default">Agregar campo</button>
+                    </div>
+                </form>
+                <!-- termina contenido-->
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                <button onclick="cm_crear_tabla()" type="button" class="btn btn-primary">Crear</button>
+            </div>
+        </div>
+    </div>
+</div>
+  <!--xxx Modal  asignar permisos tabla-->
+  <!--x Modal  ver data tabla-->
   <!-- Modal  crear funcion -->
-  <!-- Modal  crear objeto -->
-  <!-- Modal  crear usuario -->
-  <!-- Modal  eliminar usuario -->
+  <!--x Modal  crear objeto -->
+  <div class="modal fade" id="modal_cm_crear_objeto" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="ModalLabel">Crear objeto</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <!-- inicia contenido-->
+                    <form>
+                        <div class="form-group">
+                            Nombre del objeto:
+                            <input type="text" class="form-control" id="cm_crear_objeto_nombre">
+                        </div>
+                        <div class="form-group">
+                            Campos:
+                            <select class="form-control" multiple id="cm_crear_objeto_campos">
+                            </select>
+                        </div>
+                        <div class="form-group">
+                                Agregar campo:
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <input type="text" class="form-control" id="cm_crear_objeto_nombre_campo" placeholder="nombre del campo">
+                                </div>
+                                <div class="col-sm-6">
+                                    <select class="form-control" id="cm_crear_objeto_tipo_dato">
+                                        <option value="TEXT">Text</option>
+                                        <option value="INTEGER">Integer</option>
+                                        <option value="DOUBLE">Double</option>
+                                        <option value="BOOL">Bool</option>
+                                        <option value="DATE">Date</option>
+                                        <option value="DATETIME">DateTime</option>
+                                        <option value="<<Objeto>>">Objeto</option>
+                                    </select>
+                                </div>
+                            </div>
+    
+                            
+                        </div>
+                        <div class="form-group">
+                            <button onclick="cm_crear_objeto_agregar_campo()" type="button" class="btn btn-default">Agregar campo</button>
+                        </div>
+                    </form>
+                    <!-- termina contenido-->
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                    <button onclick="cm_crear_objeto()" type="button" class="btn btn-primary">Crear</button>
+                </div>
+            </div>
+        </div>
+    </div>
+  <!--x Modal  crear usuario -->
+  <div class="modal fade" id="modal_cm_crear_usuario" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="ModalLabel">Crear usuario</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <!-- inicia contenido-->
+                <form>
+                    <div class="form-group">
+                        Nombre:
+                        <input type="text" class="form-control" id="cm_crear_usuario_nombre">
+                        Password:
+                        <input type="password" class="form-control" id="cm_crear_usuario_pass">
+                    </div>
+                </form>
+                <!-- termina contenido-->
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                <button onclick="cm_crear_usuario()" type="button" class="btn btn-primary">Crear</button>
+            </div>
+        </div>
+    </div>
+</div>
+  <!--x Modal  eliminar usuario -->
   <!-- Modal  graficar tabla -->
   <!-- Modal  guardar historial -->
   <!-- Modal  -->
+  
+  <div class="modal fade" id="modal_cm_crear_$" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="ModalLabel">Crear $$</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <!-- inicia contenido-->
+                <form>
+                    <div class="form-group">
+                        Nombre:
+                        <input type="text" class="form-control" id="cm_crear_$_nombre">
+                    </div>
+                </form>
+                <!-- termina contenido-->
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                <button onclick="cm_crear_$()" type="button" class="btn btn-primary">Crear</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 {% endblock content %}
