Se agrego correr script seleccionado

--- a/IDE/templates/IDE/components/scriptPanel.html
+++ b/IDE/templates/IDE/components/scriptPanel.html
@@ -7,7 +7,7 @@
             <a href="javascript:eliminarEditor('script-editor-txtScript{{ numPanel }}')" class="fa fa-2x fa-window-close"></a>
             &nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="javascript:executeScript({{ numPanel }})" class="fa fa-2x fa-play"></a>&nbsp;&nbsp;
-            <a href="" class="fa fa-2x fa-indent"></a>&nbsp;&nbsp;
+            <a href="javascript:executeScriptSelected({{ numPanel }})" class="fa fa-2x fa-indent"></a>&nbsp;&nbsp;
             <a href="" class="fa fa-2x fa-flag"></a>&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="" class="fa fa-2x fa-download"></a>&nbsp;&nbsp;
